--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto: update
 spring.datasource.url: jdbc:mysql://localhost:3306/cars
 spring.datasource.username: root
-spring.datasource.password: 39831781
+spring.datasource.password: ********
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring:
   mvc:
